@startuml entity_driagram

' hide the spot
hide circle

' avoid problems with angled crows feet
skinparam linetype ortho

!define DICTIONARY_COLOR LightPink
!define DJANGO_COLOR LightGreen

legend right
    | Color | Type |
    | <#DICTIONARY_COLOR> | Dictionary class |
    | <#DJANGO_COLOR> | Django built-in class |
    | | Model class |
endlegend

entity User {
    * id : number <<generated>>
    --
    * username : text
    * password : text
    * email : text
    * date_joined : date
    * is_staff : bool
    * is_active : bool
    * is_superuser : bool
    * groups : number <<FK>>
    * user_permissions : number <<FK>>
    * friend_list : number <<FK>>
    --
    avatar : image
    last_login : date
}

entity Group #DJANGO_COLOR {
    * id : number <<generated>>
    --
    * name : text
    * permissions : number <<FK>>
}

entity Permission #DJANGO_COLOR {
    * id : number <<generated>>
    --
    * name : text
    * codename : text
}

entity FriendList {
    * id : number <<generated>>
    --
    * user : number <<FK>>
    * friends : number <<FK>>
}

entity FriendshipRequest {
    * id : number <<generated>>
    --
    * sender : number <<FK>>
    * receiver : number <<FK>>
    * message : str
    * is_active : boolean
    * created : date
}

entity GameFollow {
    * id : number <<generated>>
    --
    * user : number <<FK>>
    * game : number <<FK>>
    * date_of_following : date
}

entity StatusInList #DICTIONARY_COLOR {
    * id : number <<generated>>
    --
    * name : text
}

entity GameList {
    * id : number <<generated>>
    --
    * user: number <<FK>>
    * game : number <<FK>>
    * status : text <<FK>>
    * date_of_addition: date
}

entity GameReview {
    * id : number <<generated>>
    --
    * user : number <<FK>>
    * game : number <<FK>>
    * score : number
    * date_of_addition : date
    --
    review : text
}

entity Publisher #DICTIONARY_COLOR {
    * id : number <<generated>>
    --
    * name : text
}

entity Game {
    * id : number <<generated>>
    --
    * title : text
    * developer : number <<FK>>
    * publisher : number <<FK>>
    * creation_time : date
    * last_modified : date
    * genres : number <<FK>>
    * platforms : number <<FK>>
    * release_date : date
    --
    cover_image : image
    description : text
}

entity Developer #DICTIONARY_COLOR {
    * id : number <<generated>>
    --
    * name : text
}

entity Platform #DICTIONARY_COLOR {
    * id : number <<generated>>
    --
    * name : text
}

entity Genre #DICTIONARY_COLOR {
    * id : number <<generated>>
    --
    * name : text
}

User }--{ Permission
User }--{ Group
Group }--{ Permission
User -- FriendList
FriendList }--{ User
User --{ FriendshipRequest
User --{ FriendshipRequest
User --{ GameFollow
User --{ GameList
Game --{ GameFollow
GameList }-- Game
Developer --{ Game
Publisher --{ Game
Game }--{ Platform
Game }--{ Genre
GameList -- StatusInList
GameReview }-- User
GameReview }-- Game

@enduml
